# epiFetch

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: README.md  index.html
src/: data.rs  header.rs  main.rs
