[package]
name = "epifetch"
version = "0.1.0"
authors = ["cchalop1 <clement.chalopin@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.22"
serde = "1.0.103"
serde_json = "1.0.42"
prettytable-rs = "0.8.0"
clap = "2.33.0"
structopt = "0.2"
dirs = "2.0"
rust-crypto = "^0.2"
rustc-serialize = "0.3"
rpassword = "4.0"
